# syslog-ng

lib/: afinter.c  cfg.c
lib/parser/: CMakeLists.txt  Makefile.am  parser-re.c  parser-re.h
